=== RubyOSA 0.4.0 ===

2007-05-11  Justin Palmer  <encytemedia@gmail.com>

	* sample/Photoshop/new_doc.rb,
	  sample/Photoshop/new_doc_with_text.rb:
	New sample code.

2007-05-11  Laurent Sansonetti  <lsansonetti@apple.com>

	* rubyosa.gemspec,
	  NEWS:
	Prepared for 0.4.0.

	* tests/tc_ical.rb:
	Better test.

	* tests/tc_omnigraffle.rb:
	Make sure to open a document before doing the create shape test.

	* tests/as.rb:
	Rewrote to not depend on RubyCocoa anymore but use osascript(1) instead.

	* AUTHORS:
	Added Justin.

	* src/rbosa.c:
	Set a 'subj' attribute to the apple event if there is no direct parameter.

	* tests/tc_rdoc.rb:
	Added rdoc-osa tests.

	* bin/rdoc-osa:
	Better generator, can now handle scripting additions.

	* AUTHORS:
	Added Mike and Carlos.

2007-05-11  Carlos Villela  <carlos.villela@gmail.com>

	* sample/iTunes/name_that_tune.rb:
	New sample code.

2007-04-03  Wes Rogers  <wesrog@gmail.com>

	* sample/iTunes/tag_genre_lastfm.rb:
	New revision, that will only query Last.fm once per artist instead of multiple
	times (to not abuse the webservice they provide). 

2007-04-03  Laurent Sansonetti  <lsansonetti@apple.com>

	* bin/rdoc-osa:
	Do not call Config.datadir if not defined (only RubyGems defines it). 

2007-03-28  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa_properties.rb:
	Added :size as a shortcut to :point_size.

	* src/lib/rbosa.rb:
	- When converting an Hash object to OSA, property convert Array values ;
	- Convert type-less Float objects to OSA.

	* tests/tc_omnigraffle.rb:
	Added a test case.

2007-03-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* tc_itunes.rb:
	Updated test case to use #every.

2007-03-26  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  tests/tc_ical.rb,
	  tests/tc_textedit.rb:
	- Re-implemented the way to get all attributes of an object specifier list 
	  object, now using #every(:attribute_name) instead of #attribute_name ;
	- Updated test cases.
